--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - tailscale-socket:/var/run/tailscale
     command: /bin/sh -c "while sleep 1000; do :; done"
   tailscale:
-    image: ghcr.io/tailscale/tailscale:v1.28.0
+    image: ghcr.io/tailscale/tailscale:latest
     env_file: /root/.codespaces/shared/.env
     depends_on:
       - "devcontainer"
